Changelog for GEMC
==================

5/1/17
 - prepending "g" to all library names to avoid potential conflicts with other external packages
 - fixed cases where the hit collection may be empty, for example by geant4 messenger command hits/inactivate

4/20/17
 - added optional argument (appended at the end) to BEAM_P: "KE" can specify that the momentum is kinematic energy instead.
   For example, to simulate a K=250 MeV proton::

   -BEAM_P="proton, 250*MeV, 90*deg, 90*deg, KE"


4/18/17
 - clearing user information for custom generator - it was accumulating each event.

4/13/17
 - added documentation for processID multihit sharing

4/12/17
 - added flux-type bank to mirror bank

4/3/17
 - M. Holtrop: fixed vertex spread

3/24/17
 - added eic routines in gemc hit processes

3/10/17
 - routine to set generated particle from input file more general
 - reading beagle format
 - writing out generator header and particle info in a separated entry in the generated particles bank

3/9/17
 - added beagle open file in primary generator for ascii
 - stopping run manager if no more events in the LUND or BEAGLE format
 - if:

   * gemc in in batch mode;
   * N is not set explicitely;
   * an external input file is used

   Then gemc will run through all the events in the input file.


3/7/17
 - added linear interpolation for dipole fields
 - building CAD and GDML volumes before G4Physical Volumes so we can make copies of them

3/1/17
 - fixed G4LogicalBorderSurface instantiation. This caused incorrect mirror behavior for "border" type mirrors

2/24/17
 - added surface area, volume and mass information in the detector log if verbosity is high enough
 - added surface area, volume and mass information in the detector gui tab

2/22/17
 - added option ION_P:
   Option ION_P: Primary particle is an ion. Sets Z, A and Charge State of the primary particle. Setting the charge state is optional.

   - Example 1: -ION_P="6 12" sets the Z to 6, A to 12. Charge will be Z.